--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "firebase-tools": "^13.0.1",
     "gh-pages": "^6.1.0",
     "tailwindcss": "^3.3.5"
   },
