--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "get_in_contract",
+  "name": "buildbuddy",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.12.1",
+    "appwrite": "^13.0.1",
     "firebase": "^10.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
