implemented firebase storage for profile picture and banner updates

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "get-in-contract"
-  }
+    "default": "buildbuddy-bd582",
+    "staging": "buildbuddy-bd582"
+  },
+  "targets": {},
+  "etags": {}
 }
